--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,5 +1,8 @@
 FROM alpine:3.4
 RUN apk add --update mysql-client bash openssh-client && rm -rf /var/cache/apk/*
+
 COPY dump.sh /
 COPY import.sh /
+RUN chmod +x import.sh dump.sh
+
 ENTRYPOINT ["/dump.sh"]
